syntax = "proto3";

package post_grpc;

option go_package = ".;post_grpc";

message Tag {
  int32 tag_id =1;
  string tag_name =2;
  int32 status = 3;
  string createUser_id =4;
  string updateUser_id =5;
}

message ResponseStatus {
  string code=1;
}

message CreateTagRequest {
  Tag tag=1;
}

message CreateTagResponse {
  ResponseStatus status=1;
}

message ReadTagRequest {
  string tag_id=1;
}

message ReadTagResponse {
  Tag tag=1;
}

message UpdateTagRequest {
  Tag tag=1;
}

message UpdateTagResponse {
  ResponseStatus status=1;
}

message ListTagRequest {
}

message ListTagResponse {
  Tag tag=1;
}

service TagService {
  rpc CreateTag(CreateTagRequest) returns (CreateTagResponse);
  rpc ReadTag(ReadTagRequest) returns (ReadTagResponse);
  rpc UpdateTag(UpdateTagRequest) returns (UpdateTagResponse);
  rpc ListTag(ListTagRequest) returns (stream ListTagResponse);
}