syntax = "proto3";

package postservice;

option go_package = ".;postservice";

message Post {
  uint32 id = 1;
  string title=2;
  string content =3;
  // uint32 status = 2;
  // string photo_url =7;
  uint32 create_user_id =4;
  string create_user_name =5;
  uint32 update_user_id =6;
  string update_user_name =7;
  repeated uint32 tags=8;
  repeated uint32 like_users=9;
  repeated Comment comments=10;
}

message Comment {
  uint32 id =1;
  uint32 post_id =2;
  uint32 create_user_id=3;
  string create_user_name=4;
  string content=5;
}

// レスポンスのステータス
message ResponseStatus{
  string code =1;
}

message CreatePostRequest {
  Post post=1;
}

message CreatePostResponse {
  ResponseStatus status=1;
}

message ReadPostRequest {
  uint32 id=1;
}

message ReadPostResponse {
  Post post=1;
}

message UpdatePostRequest {
  Post post=1;
}

message UpdatePostResponse {
  ResponseStatus status=1;
}

message LikePostRequest {
  uint32 id=1;
  uint32 user_id=2;
}

message LikePostResponse {
  ResponseStatus status=1;
}

message NotLikePostRequest {
  uint32 id=1;
  uint32 user_id=2;
}

message NotLikePostResponse {
  ResponseStatus status=1;
}

message DeletePostRequest {
  uint32 id=1;
}

message DeletePostResponse {
  ResponseStatus status=1;
}

message ListPostRequest {
}

message ListPostResponse {
  repeated Post post=1;
}

message CreateCommentRequest {
  Comment comment=1;
}

message CreateCommentResponse {
  ResponseStatus status=1;
}

message UpdateCommentRequest {
  Comment comment=1;
}

message UpdateCommentResponse {
  ResponseStatus status=1;
}

message DeleteCommentRequest {
  uint32 id=1;
}

message DeleteCommentResponse {
  ResponseStatus status=1;
}

service PostService {
  rpc CreatePost(CreatePostRequest) returns (CreatePostResponse);
  rpc ReadPost(ReadPostRequest) returns (ReadPostResponse);
  rpc UpdatePost(UpdatePostRequest) returns (UpdatePostResponse);
  rpc LikePost(LikePostRequest)returns (LikePostResponse);
  rpc NotLikePost(NotLikePostRequest)returns (NotLikePostResponse);
  rpc DeletePost(DeletePostRequest) returns (DeletePostResponse);
  rpc ListPost(ListPostRequest) returns (ListPostResponse);
  rpc CreateComment(CreateCommentRequest) returns (CreateCommentResponse);
  rpc UpdateComment(UpdateCommentRequest) returns (UpdateCommentResponse);
  rpc DeleteComment(DeleteCommentRequest) returns (DeleteCommentResponse);
}
